# r-and-python-env-experiments

./: .gitignore  README.md
python-to-r-rpy2/: pyproject.toml
python-to-r-rpy2/dagger/: run_tests.py
python-to-r-rpy2/python/: main.py
r-renv/: README.md
r-renv/R/: example.R
